added Home screen to display all train routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,12 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
-    "lib": ["dom", "esnext", "ES5", "ES6"],
+    "lib": [
+      "dom",
+      "esnext",
+      "ES5",
+      "ES6"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
@@ -10,5 +15,6 @@
     "strict": true,
     "strictNullChecks": true,
     "target": "ES6"
-  }
+  },
+  "extends": "expo/tsconfig.base"
 }
